# ghostty-rpc

./: CHANGELOG.md  Cargo.toml  LICENSE  PKGBUILD  README.md
assets/: config.toml.example  ghostty-rpc.service
scripts/: install.sh  shell-hooks.sh  uninstall.sh
src/: config.rs  discord.rs  main.rs  monitor.rs
