[package]
name = "ghostty-rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
discord-presence = "2.1.0"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
anyhow = "1.0"
directories = "4.0"
chrono = "0.4"
log = "0.4"
env_logger = "0.10"
signal-hook = "0.3"
